Обновлены координаты на карте

--- a/map.html
+++ b/map.html
@@ -16,12 +16,62 @@
 <div id="map"></div>
 <script>
 const stations = [
-    {name: "Бектемир", address: "г.Ташкент, Бектемирский р-н, проспект Бектемир, дом 31 А", lat: 41.229307, lon: 69.333984},
-    {name: "ТТЗ", address: "г.Ташкент, М.Улугбекский р-н, пересечение улиц Гулсанам и Юзработ", lat: 41.359402, lon: 69.382904},
-    {name: "Чинабад", address: "г.Ташкент, М.Улугбекский р-н, МКАД, по улице Чинабад", lat: 41.32926, lon: 69.310914},
-    {name: "Корасув", address: "г.Ташкент, М.Улугбекский р-н, ул.Авайхон, дом 5", lat: 41.31201, lon: 69.344072},
-    {name: "Сергели-1", address: "г.Ташкент, Сергелинский р-н, ул.Новая Сергели, 61-й км МКАД", lat: 41.230742, lon: 69.2055465}
+    {name: "Паркентский", address: "г.Ташкент, Яшнабадский р-н, махаллинский сход граждан Истиклол", lat: 41.314216, lon: 69.327961},
+    {name: "Алока", address: "г.Ташкент, ул.Беруни, 32/1", lat: 41.333937, lon: 69.215363},
+    {name: "Жаркурган", address: "г.Ташкент, Яшнабадский р-н, махаллинский сход граждан Жаркургон", lat: 41.270448, lon: 69.327458},
+    {name: "Шахристан", address: "г.Ташкент, Шахристанская улица", lat: 41.351064, lon: 69.286347},
+    {name: "Рохат", address: "г.Ташкент, Новый Ташкентский р-н, населённый пункт Барданкуль", lat: 41.254669, lon: 69.384014},
+    {name: "Лимонарий", address: "г.Ташкент, Кибрайский р-н, городской посёлок Салар", lat: 41.356216, lon: 69.345126},
+    {name: "Ипподром 1", address: "г.Ташкент, Чиланзарский р-н, махаллинский сход граждан Бешкурган", lat: 41.252046, lon: 69.163002},
+    {name: "Сергели", address: "г.Ташкент, Сергелийский р-н, махаллинский сход граждан Бунёдобод", lat: 41.230742, lon: 69.206095},
+    {name: "ТТЗ", address: "г.Ташкент, Мирзо-Улугбекский р-н, махаллинский сход граждан Мунавваркары", lat: 41.359402, lon: 69.385098},
+    {name: "Истирохат", address: "г.Ташкент, Учтепинский р-н, махаллинский сход граждан Уткир", lat: 41.319670, lon: 69.157262},
+    {name: "Чинобод", address: "г.Ташкент, Мирзо-Улугбекский р-н, махаллинский сход граждан Дархан", lat: 41.329260, lon: 69.313108},
+    {name: "Чилонзор", address: "г.Ташкент, Учтепинский р-н, махаллинский сход граждан Ватан", lat: 41.284712, lon: 69.172180},
+    {name: "Келес", address: "г.Ташкент, махаллинский сход граждан Алишер Навоий, ул. Равнак, 6", lat: 41.397993, lon: 69.204297},
+    {name: "Дендропарк", address: "г.Ташкент, Ташкентский р-н, махаллинский сход граждан Сабзавот", lat: 41.387260, lon: 69.293199},
+    {name: "Бектемир", address: "г.Ташкент, Бектемирский р-н, проспект Бектемир", lat: 41.229307, lon: 69.336178},
+    {name: "Кибрай 1", address: "г.Ташкент, Кибрайский р-н, M. Bedil ko'chasi, 200, городской посёлок Кибрай", lat: 41.393632, lon: 69.474654},
+    {name: "Башлик", address: "г.Ташкент, Яккасарайский р-н, 4-й проезд Башлык, 13Б", lat: 41.265373, lon: 69.241519},
+    {name: "Корасорой", address: "г.Ташкент, Алмазарский р-н, 2-й проезд Файзибаланд", lat: 41.348141, lon: 69.238328},
+    {name: "Медгородок", address: "г.Ташкент, Алмазарский р-н, махаллинский сход граждан Жийдали", lat: 41.366082, lon: 69.183292},
+    {name: "Уч тепа", address: "г.Ташкент, Алмазарский р-н, махаллинский сход граждан Жийдали", lat: 41.293692, lon: 69.172213},
+    {name: "Изза", address: "г.Ташкент, Учтепинский р-н, махаллинский сход граждан Фазылтепа", lat: 41.277881, lon: 69.150032},
+    {name: "Бодомзор", address: "г.Ташкент, Юнусабадский р-н, махаллинский сход граждан Янгитарнов", lat: 41.341185, lon: 69.299855},
+    {name: "Чирчик", address: "г.Ташкентская обл., Чирчик, махаллинский сход граждан Умид", lat: 41.447175, lon: 69.561611},
+    {name: "Такачи", address: "г.Ташкент, Учтепинский р-н, махаллинский сход граждан Такачи", lat: 41.305860, lon: 69.160175},
+    {name: "Юнусобод", address: "г.Ташкент, Юнусабадский р-н, махаллинский сход граждан Кадирдон", lat: 41.364163, lon: 69.299873},
+    {name: "Кани", address: "г.Ташкент, ул. Катта Каъни", lat: 41.272989, lon: 69.167546},
+    {name: "Газалкент", address: "г.Ташкентская обл., Бостанлыкский р-н, Газалкент, ул. Узгариш", lat: 41.572062, lon: 69.803984},
+    {name: "Домбрабад", address: "г.Ташкент, Яккасарайский р-н, Малая кольцевая дорога, 11А", lat: 41.264704, lon: 69.219114},
+    {name: "Тахтапул", address: "г.Ташкент, ул. Тахтапуль Дарвоза", lat: 41.341503, lon: 69.261511},
+    {name: "Корасув", address: "г.Ташкент, Мирзо-Улугбекский р-н, махаллинский сход граждан Авайхан", lat: 41.312010, lon: 69.346266},
+    {name: "Ахмаддониш", address: "г.Ташкент, Юнусабадский р-н, 5-й квартал, массив Юнусабад", lat: 41.358559, lon: 69.273771},
+    {name: "Назарбек", address: "г.Ташкентская обл., Зангиатинский р-н, махаллинский сход граждан Харакат", lat: 41.302486, lon: 69.120806},
+    {name: "Чупонота", address: "г.Ташкент, Чиланзарский р-н, махаллинский сход граждан Лутфий", lat: 41.293069, lon: 69.194891},
+    {name: "Усмон Н", address: "г.Ташкент, Яккасарайский р-н, махаллинский сход граждан Яккасарай", lat: 41.255911, lon: 69.214943},
+    {name: "Чукурсой", address: "г.Ташкент, Яккасарайский р-н, махаллинский сход граждан Яккасарай", lat: 41.356391, lon: 69.248197},
+    {name: "Коракамиш", address: "г.Ташкент, Алмазарский р-н, махаллинский сход граждан Ислам Ата", lat: 41.360659, lon: 69.238755},
+    {name: "Кибрай 2", address: "г.Ташкент, Кибрайский р-н, городской посёлок Арген", lat: 41.373764, lon: 69.430122},
+    {name: "Генерал Узоков", address: "г.Ташкент, Шайхантахурский р-н, Малая кольцевая дорога, махаллинский сход граждан Кукча", lat: 41.327070, lon: 69.195252},
+    {name: "Андижан 1", address: "г.Андижан, махаллинский сход граждан Дустлик, ул. Гулистон, 842", lat: 40.722781, lon: 72.310142},
+    {name: "Андижан 4", address: "г.Андижан, ул. Миллий Тикланиш", lat: 40.771349, lon: 72.369624},
+    {name: "Андижан 5", address: "г.Андижанская обл., Балыкчинский р-н, населённый пункт Гулзор", lat: 40.913937, lon: 71.833265},
+    {name: "Коканд 1", address: "г.Коканд, ул. Обиравон, 2A", lat: 40.557623, lon: 70.940218},
+    {name: "Фергана 1", address: "г.Фергана, ул.Бахор", lat: 40.406126, lon: 71.778250},
+    {name: "Маргилан", address: "г.Маргилан, ул. Бурхануддина Маргинани", lat: 40.474174, lon: 71.752449},
+    {name: "Наманган 2", address: "г.Наманган, ул. Тукимачилар, 25A", lat: 40.992751, lon: 71.598199},
+    {name: "Наманган 3", address: "г.Наманган, махаллинский сход граждан Янги Хаёт, ул.Уйчи", lat: 41.010414, lon: 71.726941},
+    {name: "Солнечный", address: "г.Ташкентская обл., Зангиатинский р-н", lat: 41.230135, lon: 69.150033},
+    {name: "Янгиюль", address: "г.Ташкентская обл., Янгиюль, махаллинский сход граждан Мевазор", lat: 41.106290, lon: 69.047184},
+    {name: "Алмалык 1", address: "г.Ташкентская обл., г.Алмалык, ул.Металлургов", lat: 40.873690, lon: 69.583313 },
+    {name: "Хонобод", address: "г.Ташкентская обл., Зангиатинский р-н, КФЙ Хонобод", lat: 39.8442, lon: 69.4594},
+    {name: "Паркент", address: "г.Ташкентская обл., г.Паркент, МФЙ Истиклол, ул.Навои", lat: 40.4411, lon: 69.5452},
+    {name: "Бука", address: "г.Ташкентская обл., Букинский р-н, ул. Магистральная", lat: 40.3294, lon: 69.2989},
+    {name: "Узгариш", address: "г.Ташкент, Сергелийский р-н, махаллинский сход граждан Кут-Барака, ул.Беларык, 3", lat: 41.243681, lon: 69.226233},
+    {name: "Туйтепа", address: "г.Ташкентская обл., Нурафшан, населённый пункт Кумарык", lat: 41.066390, lon: 69.341679}
 ];
+
 
 const map = L.map('map').setView([41.3111,69.2797],11);
 L.tileLayer("https://tile.openstreetmap.org/{z}/{x}/{y}.png",{maxZoom:19,attribution:'&copy; <a href="https://www.openstreetmap.org/copyright">OSM</a>'}).addTo(map);
